--- a/2024/views/index.haml
+++ b/2024/views/index.haml
@@ -1,195 +1,191 @@
 !!!
 %html
+    %head
+        %meta{charset: "utf-8"}
+        %meta{"http-equiv": "X-UA-Compatible", content: "IEedge"}
+        %meta{name: "viewport", content: "width=device-width"}
 
-%head
-    %meta{charset: "utf-8"}
-    %meta{"http-equiv": "X-UA-Compatible", content: "IEedge"}
-    %meta{name: "viewport", content: "widthdevice-width, initial-scale1"}
+        %title Koppefest
 
-    %title Koppefest
+        %script{src: "/js/jquery.js"}
+        %script{src: "/js/popper.js"}
+        %script{src: "/js/bootstrap.min.js"}
+        %script{src: "/js/koppe.js"}
 
-    %script{src: "/js/jquery.js"}
-    %script{src: "/js/popper.js"}
-    %script{src: "/js/bootstrap.min.js"}
-    %script{src: "/js/koppe.js"}
+        %link{href: "/css/bootstrap.min.css", rel: "stylesheet"}
+        %link{href: "/css/koppe.css", rel: "stylesheet"}
 
-    %link{href: "/css/bootstrap.min.css", rel: "stylesheet"}
-    %link{href: "/css/koppe.css", rel: "stylesheet"}
-
-%body
-
--# Front
-#page.container
-    #wallpaper.row
-        .col-md-12
-            %span.fontface-top.border-front
-                %h1 Unser Siedlungsfest
-                %h2 Samstag 14. September 2024 ab 15:00 Uhr 
-
-    -# Disclaimer
-    .row
-        .col-md-12.so_far
-            Luftaufnahmen:
-            %a{href: "https://geoportal.essen.de/luftbilder/", target: "_blank"}
-                https://geoportal.essen.de/luftbilder
-
-    -# Main
-    .row
-        .col-md-12
-            .container
-                .row
-                    .col-md-12
-                        .row
-                            .col-md-12.text-item.space
+    %body
+        -# Front
+        #page.container
+            .row
+                .col
+                    %table.table
+                        -# Header
+                        %tr#wallpaper
+                            %td{colspan: 2}
+                                %span.fontface-top.border-front
+                                    %h1 Unser Siedlungsfest
+                                    %h2 Samstag 14. September 2024 ab 15:00 Uhr 
+                        -# Disclaimer
+                        %tr
+                            %td.so_far.border-0{colspan: 2}
+                                Luftaufnahmen:
+                                %a{href: "https://geoportal.essen.de/luftbilder/", target: "_blank"}
+                                    https://geoportal.essen.de/luftbilder
+                        %tr
+                            %td.border-0{colspan: 2}
                                 Hallo liebe NachbarInnen,
-                            .col-md-12.text-item.space
+                        %tr
+                            %td.border-0{colspan: 2}
                                 für viele geht nun schon das 10. Jahr in der Siedlung zu Ende… während Corona haben wir es nicht geschafft bzw. gewagt, aber nun ist es wieder so weit….
-                            .col-md-12.text-item.space
-                                Um ein wenig Koordinieren zu können bitten wir bis 30.08.2024 um Rückmeldung über dieses Formular oder bei Rückfragen bei Manuela (#149) oder Christoph (#89) melden.
-                            .col-md-12.text-item.space
+                        %tr
+                            %td.border-0{colspan: 2}
+                                Um ein wenig koordinieren zu können bitten wir bis 01.09.2024 um Rückmeldung über dieses Formular oder bei Rückfragen bei Manuela (#149) oder Christoph (#89) melden.
+                        %tr
+                            %td.border-0{colspan: 2}
                                 Auf jeden Fall mitzubringen: 
-                            .col-md-12.text-item.space
+                        %tr
+                            %td.border-0{colspan: 2}
                                 Gute Laune und für jeden Gast eigenes Geschirr, Besteck und Gläser/Becher, um Einwegutensilien bzw., Müll zu vermeiden.
-                            .col-md-12.text-item.space
+                        %tr
+                            %td{colspan: 2}
                                 Wir hoffen natürlich nur auf bestes Wetter.
-                            #weather1.col-md-6
-                            #weather2.col-md-6
+                        %tr
+                            %td#weather1
+                            %td#weather2
+                        -# Form
+                        %tr
+                            %td{colspan: 2}
+                                Ich/Wir wohnen in Hausnummer
+                                %select.space{id: "houseno", tabindex: 1}
+                                    -(1..159).step(2).each do |num|
+                                        -unless @visitornos.include? num
+                                            %option{value: num}= "&sharp;%d" % num
+                        %tr
+                            %td
+                                Ich/Wir kommen mit
+                                %input.input-lg{id: "adultsno", type: "number", min: 0, value: 1, tabindex: 2}
+                                Erwachsenen
+                                %input.input-lg{id: "childrenno", type: "number", min: 0, value: 0, tabindex: 3}
+                                Kindern
+                            %td.so_far
+                                (Bisher
+                                =@adultsno
+                                Erwachsene und
+                                =@childrenno
+                                Kinder)
+                        %tr
+                            %td
+                                Ich/Wir können
+                                %input.input-lg{id: "beerbenchsno", type: "number", min: 0, value: 0, tabindex: 4}
+                                Bierzeltgarnitur(en) mitbringen
+                            %td.so_far
+                                (Bisher
+                                =@beerbenchsno
+                                Bierzeltgarnituren)
+                        %tr
+                            %td
+                                Ich/Wir können
+                                %input.input-lg{id: "gardentablesno", type: "number", min: 0, value: 0, tabindex: 5}
+                                Gartentisch(e) und
+                                %input.input-lg{id: "chairsno", type: "number", min: 0, value: 0, tabindex: 6}
+                                Stühle mitbringen
+                            %td.so_far
+                                (Bisher
+                                =@gardentablesno
+                                Gartentische und
+                                =@chairsno
+                                Stühle)
+                        %tr
+                            %td
+                                Ich/Wir können
+                                %input.input-lg{id: "standtablesno", type: "number", min: 0, value: 0, tabindex: 7}
+                                Stehtische mitbringen
+                            %td.so_far
+                                (Bisher
+                                =@standtablesno
+                                Stehtische)
+                        %tr
+                            %td
+                                Ich/Wir können
+                                %input.input-lg{id: "walltablesno", type: "number", min: 0, value: 0, tabindex: 8}
+                                Tapeziertisch(e) [als Buffett] mitbringen
+                            %td.so_far
+                                (Bisher
+                                =@walltablesno
+                                Tapeziertische)
+                        %tr
+                            %td
+                                Ich/Wir können
+                                %input.input-lg{id: "tentsno", type: "number", min: 0, value: 0, tabindex: 9}
+                                Zelte mitbringen
+                            %td.so_far
+                                (Bisher
+                                =@tentsno
+                                Zelte)
+                        %tr
+                            %td
+                                Ich/Wir können
+                                %input.input-lg{id: "grillsno", type: "number", min: 0, value: 0, tabindex: 10}
+                                Grill mitbringen
+                            %td.so_far
+                                (Bisher
+                                =@grillsno
+                                Grills)
+                        %tr
+                            %td
+                                Ich/Wir können
+                                %input.input-lg{id: "parasolsno", type: "number", min: 0, value: 0, tabindex: 11}
+                                Sonnenschirme mitbringen
+                            %td.so_far
+                                (Bisher
+                                =@parasolsno
+                                Sonnenschirme)
+                        %tr
+                            %td{colspan: 2}
+                                Ich/Wir bringen Speisen mit: 
+                                %textarea{id: "foods", rows: 2, tabindex: 12}
+                        %tr
+                            %td{colspan: 2}
+                                Ich/Wir bringen Getränke mit: 
+                                %textarea{id: "drinks", rows: 2, tabindex: 13}
+                        %tr
+                            %td{colspan: 2}
+                                Sonstiges: 
+                                %textarea{id: "misc", rows: 2, tabindex: 14}
 
-    -# Form
-    .row
-        .col-md-12
-            %table.table
-                %tr
-                    %td{colspan: 2}
-                        Ich/Wir wohnen in Hausnummer
-                        %select.space{id: "houseno", tabindex: 1}
-                            -(1..159).step(2).each do |num|
-                                -unless @visitornos.include? num
-                                    %option{value: num}= "&sharp;%d" % num
-                %tr
-                    %td
-                        Ich/Wir kommen mit
-                        %input.input-lg{id: "adultsno", type: "number", min: 0, value: 1, tabindex: 2}
-                        Erwachsenen
-                        %input.input-lg{id: "childrenno", type: "number", min: 0, value: 0, tabindex: 3}
-                        Kindern
-                    %td.so_far
-                        (Bisher
-                        =@adultsno
-                        Erwachsene und
-                        =@childrenno
-                        Kinder)
-                %tr
-                    %td
-                        Ich/Wir können
-                        %input.input-lg{id: "beerbenchsno", type: "number", min: 0, value: 0, tabindex: 4}
-                        Bierzeltgarnitur(en) mitbringen
-                    %td.so_far
-                        (Bisher
-                        =@beerbenchsno
-                        Bierzeltgarnituren)
-                %tr
-                    %td
-                        Ich/Wir können
-                        %input.input-lg{id: "gardentablesno", type: "number", min: 0, value: 0, tabindex: 5}
-                        Gartentisch(e) und
-                        %input.input-lg{id: "chairsno", type: "number", min: 0, value: 0, tabindex: 6}
-                        Stühle mitbringen
-                    %td.so_far
-                        (Bisher
-                        =@gardentablesno
-                        Gartentische und
-                        =@chairsno
-                        Stühle)
-                %tr
-                    %td
-                        Ich/Wir können
-                        %input.input-lg{id: "standtablesno", type: "number", min: 0, value: 0, tabindex: 7}
-                        Stehtische mitbringen
-                    %td.so_far
-                        (Bisher
-                        =@standtablesno
-                        Stehtische)
-                %tr
-                    %td
-                        Ich/Wir können
-                        %input.input-lg{id: "walltablesno", type: "number", min: 0, value: 0, tabindex: 8}
-                        Tapeziertisch(e) [als Buffett] mitbringen
-                    %td.so_far
-                        (Bisher
-                        =@walltablesno
-                        Tapeziertische)
-                %tr
-                    %td
-                        Ich/Wir können
-                        %input.input-lg{id: "tentsno", type: "number", min: 0, value: 0, tabindex: 9}
-                        Zelte mitbringen
-                    %td.so_far
-                        (Bisher
-                        =@tentsno
-                        Zelte)
-                %tr
-                    %td
-                        Ich/Wir können
-                        %input.input-lg{id: "grillsno", type: "number", min: 0, value: 0, tabindex: 10}
-                        Grill mitbringen
-                    %td.so_far
-                        (Bisher
-                        =@grillsno
-                        Grills)
-                %tr
-                    %td
-                        Ich/Wir können
-                        %input.input-lg{id: "parasolsno", type: "number", min: 0, value: 0, tabindex: 11}
-                        Sonnenschirme mitbringen
-                    %td.so_far
-                        (Bisher
-                        =@parasolsno
-                        Sonnenschirme)
-                %tr
-                    %td{colspan: 2}
-                        Ich/Wir bringen Speisen mit: 
-                        %textarea{id: "foods", rows: 2, tabindex: 12}
-                %tr
-                    %td{colspan: 2}
-                        Ich/Wir bringen Getränke mit: 
-                        %textarea{id: "drinks", rows: 2, tabindex: 13}
-                %tr
-                    %td{colspan: 2}
-                        Sonstiges: 
-                        %textarea{id: "misc", rows: 2, tabindex: 14}
+                        %tr
+                            %td
+                                %label{for: "buildup"}
+                                    Ich/Wir können beim Aufbau helfen
+                                %input{type: "checkbox", id: "buildup", tabindex: 15}
+                            %td.so_far
+                                (Bisher
+                                =@buildup
+                                Helfende)
 
-                %tr
-                    %td
-                        %label{for: "buildup"}
-                            Ich/Wir können beim Aufbau helfen
-                        %input{type: "checkbox", id: "buildup", tabindex: 15}
-                    %td.so_far
-                        (Bisher
-                        =@buildup
-                        Helfende)
+                        %tr
+                            %td
+                                %label{for: "buildup"}
+                                    Ich/Wir können beim Aufbau helfen
+                                %input{type: "checkbox", id: "teardown", tabindex: 16}
+                            %td.so_far
+                                (Bisher
+                                =@teardown
+                                Helfende)
 
-                %tr
-                    %td
-                        %label{for: "buildup"}
-                            Ich/Wir können beim Aufbau helfen
-                        %input{type: "checkbox", id: "teardown", tabindex: 16}
-                    %td.so_far
-                        (Bisher
-                        =@teardown
-                        Helfende)
+                        %tr
+                            %td{colspan: 2}
+                                %input{class: "submit", type: "button", value: "Abschicken", tabindex: 17}
 
-                %tr
-                    %td{colspan: 2}
-                        %input{class: "submit", type: "button", value: "Abschicken", tabindex: 17}
+                        %tr
+                            %td{colspan: 2}
+                                %h2
+                                    Folgende Hausnummern sind schon mit dabei:
 
-                %tr
-                    %td{colspan: 2}
-                        %h2
-                            Folgende Hausnummern sind schon mit dabei:
-
-                        #list.d-flex.flex-row.flex-wrap
-                            -# Houses
-                            - @houses.each do |h|
-                                %div
-                                    %span{class: 'icon'}= "&sharp;%d" % h.houseno rescue 89
+                                #list.d-flex.flex-row.flex-wrap
+                                    -# Houses
+                                    - @houses.each do |h|
+                                        %div
+                                            %span{class: 'icon'}= "&sharp;%d" % h.houseno rescue 89
