--- a/2024/public/css/koppe.css
+++ b/2024/public/css/koppe.css
@@ -134,7 +134,6 @@ h4 {
 /* Content */
 td, input, textarea {
     font-size: 20px;
-    margin: 10px;
     color: var(--black);
     vertical-align: middle !important;
 }
@@ -145,15 +144,16 @@ div {
 }
 
 input, textarea {
-  color: var(--black);
-  border: var(--border);
-  width: 100%;
-  text-shadow: none;
+    color: var(--black);
+    border: var(--border);
+    width: 100%;
+    margin: 10px;
+    text-shadow: none;
 }
 
 input[type=button], input[type=submit] {
-  color: var(--black);
-  border: var(--border);
+    color: var(--black);
+    border: var(--border);
 }
 
 input[type=number] {
@@ -166,7 +166,7 @@ input[type=checkbox] {
 }
 
 input:hover, textarea:hover {
-  border: 1px solid var(--blue);
+    border: 1px solid var(--blue);
 }
 
 .title-item {
@@ -262,3 +262,6 @@ hr {
     padding-left: 0px;
 }
 
+.container {
+    padding: 0px;
+}
