--- a/2024/views/index.haml
+++ b/2024/views/index.haml
@@ -110,7 +110,7 @@
                             %td
                                 Ich/Wir können
                                 %input.input-lg{id: "walltablesno", type: "number", min: 0, value: 0, tabindex: 8}
-                                Tapeziertisch(e) [als Buffett] mitbringen
+                                Tapeziertisch(e) [als Buffet] mitbringen
                             %td.so_far
                                 (Bisher
                                 =@walltablesno
