--- a/2024/views/index.haml
+++ b/2024/views/index.haml
@@ -176,8 +176,10 @@
                                 Helfende)
 
                         %tr
-                            %td{colspan: 2}
+                            %td.text-center{colspan: 2}
                                 %input{class: "submit", type: "button", value: "Abschicken", tabindex: 17}
+                                %a.cancel{href: '#'}
+                                    Ich/Wir können leider nicht kommen.
 
                         %tr
                             %td{colspan: 2}
