--- a/2024/views/index.haml
+++ b/2024/views/index.haml
@@ -168,7 +168,7 @@
                         %tr
                             %td
                                 %label{for: "buildup"}
-                                    Ich/Wir können beim Aufbau helfen
+                                    Ich/Wir können beim Abbau helfen
                                 %input{type: "checkbox", id: "teardown", tabindex: 16}
                             %td.so_far
                                 (Bisher
